1.07/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashgeneratorapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashgeneratorapi
  template:
    metadata:
      labels:
        app: hashgeneratorapi
    spec:
      containers:
        - name: hashgeneratorapi
          image: semitaho/hashgeneratorapi
