1.07/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashgeneratorapi-svc
spec:
  type: ClusterIP
  selector:
    app: hashgeneratorapi
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 7001
