1.07/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-material-ingress
spec:
  rules:
  - http:
      paths:
      - path: /hash
        pathType: Prefix
        backend:
          service:
            name: hashgeneratorapi-svc
            port:
              number: 2345
